--- a/index.html
+++ b/index.html
@@ -204,8 +204,9 @@
     <script>
         document.getElementById('submit-btn').addEventListener('click', function(event) {
             event.preventDefault();
-            const nameInput = document.getElementById('love-name').value.trim();
-            if (nameInput.toLowerCase() === "garvit") {
+              const nameInput = document.getElementById('love-name').value.trim().toLowerCase();
+              const allowedNames = ["garvit","vishwaraj","riddhi","sana" ]
+            if (allowedNames.includes(nameInput)) {
                 alert("Welcome to the Cake Party! 🎂");
                 window.location.href = "main.html";
             } else {
