--- a/Final.html
+++ b/Final.html
@@ -386,10 +386,10 @@
                     <h3 class="toyou">to you!</h3>
                 </div>
                 <div class="wishes">
-                    <p>Dear Ma’am, My Love, ❤️</p>
+                    <p>Dear Ma’am,  ❤️</p>
                     <p>Happy Birthday!! 🎉🥳 I hope your day is filled with endless love and laughter! May all your
                         wishes come true and your heart always shine with happiness. 💖✨</p>
-                    <p class="name">With love ~ Your </p>
+                    <p class="name">With love ~ Your Vishwaraj </p>
                     <p class="name"></p>
                 </div>
             </div>
