--- a/Final.html
+++ b/Final.html
@@ -252,11 +252,11 @@
             left: 30px;
             width: 2px;
             height: 100%;
-            background: repeating-linear-gradient(to bottom,
+/*             background: repeating-linear-gradient(to bottom, 
                     #ff6b6b 0px,
                     #ff6b6b 5px,
                     transparent 5px,
-                    transparent 10px);
+                    transparent 10px);*/
         }
 
         .name {
