--- a/Final.html
+++ b/Final.html
@@ -377,7 +377,7 @@
             </div>
             <div class="cardInside">
                 <div class="img">
-                    <img src="shobhitdev.jpg" alt="Brotherpic" class="bdyboy">
+                    <img src="p.jpg" alt="Brotherpic" class="bdyboy">
                     <img src="6ob.gif" alt="confetti" class="confetti">
                 </div>
                 <div class="inside-text">
