--- a/index.html
+++ b/index.html
@@ -205,7 +205,7 @@
         document.getElementById('submit-btn').addEventListener('click', function(event) {
             event.preventDefault();
               const nameInput = document.getElementById('love-name').value.trim().toLowerCase();
-              const allowedNames = ["garvit","vishwaraj","riddhi","sana" ]
+              const allowedNames = ["garvit","vishwaraj","riddhi" ]
             if (allowedNames.includes(nameInput)) {
                 alert("Welcome to the Cake Party! 🎂");
                 window.location.href = "main.html";
