Fix HTML encoding issues in main.html

--- a/main.html
+++ b/main.html
@@ -269,7 +269,7 @@
             <span>🌟</span> There’s a surprise waiting for you! 😊🎁 <span>✨</span>
         </p>
         <p class="message hidden" id="secondMessage">
-            <span>🎉</span> Happy Birthday, Miss! 🎉🥳 <span>💖</span>
+            <span>🎉</span> Happy Birthday, jannu! 🎉🥳 <span>💖</span>
         </p>
     </div>
 
@@ -401,5 +401,6 @@
         });
     </script>
 </body>
+
 
 </html>
