--- a/birthday-main.html
+++ b/birthday-main.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Happy Birthday </title>
+    <title>Happy Birthday cutie</title>
     <link href="https://fonts.googleapis.com/css2?family=Dancing+Script:wght@700&family=Poppins:wght@300;500;700&display=swap" rel="stylesheet">
     <script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/3.12.2/gsap.min.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/3.12.2/TextPlugin.min.js"></script>
@@ -263,7 +263,7 @@
     <div class="hearts-container" id="heartsContainer"></div>
     
     <div class="birthday-container">
-        <h1 class="birthday-text text-6xl">Happy Birthday, Miss</h1>
+        <h1 class="birthday-text text-6xl">Happy Birthday jaanu </h1>
         <p class="romantic-message">Every moment with you is a celebration, but today is especially magical. Here's to another year of love, laughter, and countless beautiful memories together.</p>
         <button class="celebrate-button" id="celebrateBtn">Celebrate Your Day</button>
         <button class="next-page-button" id="nextPageBtn">Next</button>
@@ -930,3 +930,4 @@
     </script>
 </body>
 </html>
+
