Refactor styles for birthday card layout
Adjusted dimensions and styles for birthday card and elements.

--- a/Final.html
+++ b/Final.html
@@ -368,7 +368,7 @@
                 <div class="front-text">
                     <h3 class="happy">HAPPY</h3>
                     <h2 class="bday">BIRTHDAY</h2>
-                    <h3 class="toyou">to you!</h3>
+                    <h3 class="toyou">Angel 😇!</h3>
                 </div>
                 <div class="plate">
                     <div class="cake"></div>
@@ -383,10 +383,10 @@
                 <div class="inside-text">
                     <h3 class="happy">HAPPY</h3>
                     <h2 class="bday">BIRTHDAY</h2>
-                    <h3 class="toyou">to you!</h3>
+                    <h3 class="toyou">Jaanu😊!</h3>
                 </div>
                 <div class="wishes">
-                    <p>Dear Ma’am,  ❤️</p>
+                    <p>Dear Angel,  ❤️</p>
                     <p>Happy Birthday!! 🎉🥳 I hope your day is filled with endless love and laughter! May all your
                         wishes come true and your heart always shine with happiness. 💖✨</p>
                     <p class="name">With love ~ Your Vishwaraj </p>
@@ -402,3 +402,4 @@
 </body>
 
 </html>
+
