Modify allowed names for login validation
Updated allowed names in the login form script.

--- a/index.html
+++ b/index.html
@@ -205,7 +205,7 @@
         document.getElementById('submit-btn').addEventListener('click', function(event) {
             event.preventDefault();
               const nameInput = document.getElementById('love-name').value.trim().toLowerCase();
-              const allowedNames = ["garvit","angel","vishwaraj","riddhi" ]
+              const allowedNames = ["garvit","ami","angel","vishwaraj","riddhi" ]
             if (allowedNames.includes(nameInput)) {
                 alert("Welcome to the Cake Party! 🎂");
                 window.location.href = "main.html";
@@ -232,4 +232,5 @@
 
 </body>
 </html>
+
 
