Refactor birthday card styles and content
Adjusted styles and dimensions for birthday card elements, including resizing the card, cake, and text. Updated inner text and image references.

--- a/Final.html
+++ b/Final.html
@@ -389,7 +389,7 @@
                     <p>Dear Angel,  ❤️</p>
                     <p>Happy Birthday!! 🎉🥳 I hope your day is filled with endless love and laughter! May all your
                         wishes come true and your heart always shine with happiness. 💖✨</p>
-                    <p class="name">With love ~ Your Vishwaraj </p>
+                    <p class="name">With love ~ Garvit </p>
                     <p class="name"></p>
                 </div>
             </div>
@@ -402,4 +402,5 @@
 </body>
 
 </html>
+
 
