Refactor birthday card layout and styles
Adjusted dimensions and styles for the birthday card, cake, and text elements to improve layout and appearance.

--- a/Final.html
+++ b/Final.html
@@ -377,7 +377,7 @@
             </div>
             <div class="cardInside">
                 <div class="img">
-                    <img src="p.jpg" alt="Brotherpic" class="bdyboy">
+                    <img src="p.jpg" alt="Photo" class="bdyboy">
                     <img src="6ob.gif" alt="confetti" class="confetti">
                 </div>
                 <div class="inside-text">
@@ -402,5 +402,6 @@
 </body>
 
 </html>
+
 
 
